<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".databaseActivities.CreateTableActivity"
    tools:showIn="@layout/activity_create_table">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="129dp"
        android:layout_height="31dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/ScrollLayout"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onPress"
        android:text="Create table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollLayout"
        android:layout_width="352dp"
        android:layout_height="410dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1">


            <TableRow
                android:id="@+id/table_row1"
                android:layout_width="297dp"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/columnName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/tableColName"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/columnType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/tableColType"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/primaryKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/tableColPrimary"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/autoincrement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/tableColAuto"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/notNull"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/tableColNull"
                    android:textColor="#000" />

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dip"
                android:background="#ff0000" />
        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>