<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".databaseActivities.DetailTableActivity"
    tools:showIn="@layout/activity_detail_table">


    <TextView
        android:id="@+id/tableName"
        android:layout_width="110dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/databaseName"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/databaseName"
        android:layout_width="101dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"

        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/databaseName">

        <TableRow
            android:id="@+id/table_row1"
            android:layout_width="209dp"
            android:layout_height="16dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/delete"
                android:layout_width="28dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/delete"
                android:textColor="#000" />

            <TextView
                android:id="@+id/edit"
                android:layout_width="28dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/update"
                android:textColor="#000" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:background="#ff0000" />
    </TableLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onPresser"
        android:text="@string/btn_addRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>